# Stegosafe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crypto-ci.yml
crates/crypto/: Cargo.toml
crates/crypto/fuzz/: Cargo.toml
crates/crypto/fuzz/fuzz_targets/: fuzz_decrypt.rs  fuzz_kdf.rs  fuzz_nonce.rs
crates/crypto/src/: aead.rs  entropy.rs  error.rs  kdf.rs  lib.rs  nonce.rs
crates/crypto/tests/: aead_tests.rs  entropy_tests.rs  kdf_tests.rs  nonce_tests.rs
crates/crypto/tests/vectors/: aes_gcm.json  hkdf.json
crates/stego/: Cargo.toml
crates/stego/src/: engine.rs  error.rs  lib.rs  params.rs  selector.rs  util.rs
crates/stego/src/techniques/: edge_adaptive.rs  lsb_random.rs  lsb_sequential.rs  mod.rs
crates/stego/tests/: round_trip.rs
crates/stegosafe/: Cargo.toml  README.md
crates/stegosafe/src/: main.rs
crates/stegosafe/tests/: integration_test.rs
docs/phase1/: key-lifecycle.md  threat-model.md
