[package]
name = "stegosafe-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for the Stegosafe adaptive steganography tool"
publish = false

[dependencies]
# --- RustCrypto (digest v0.10 ecosystem) ---
# RUSTSEC-2023-0096: must use =0.10.3 (plaintext exposure in <0.10.3)
aes-gcm = "=0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
hmac = "0.12.1"

# --- Memory safety ---
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# --- Error handling ---
thiserror = "1"

# --- Compression ---
zstd = "0.13"

# --- Entropy ---
getrandom = "0.2"
rand_core = "0.6"

# --- Hardware TRNG (x86_64 only) ---
[target.'cfg(target_arch = "x86_64")'.dependencies]
rdrand = "0.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
