[package]
name = "stegosafe"
version = "0.1.0"
edition = "2021"
description = "Steganography application built on stegosafe-crypto"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
thiserror = "1.0"
stegosafe-crypto = { path = "../crypto" }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
