[package]
name = "stegosafe"
version = "0.1.0"
edition = "2021"
description = "Steganography application built on stegosafe-crypto"
publish = false

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
stegosafe-crypto = { path = "../crypto" }
hex = "0.4"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
